# src/swagger-output.json
@@ -1,59 +1,49 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "TWW-API",
+    "title": "API Documentation",
     "description": "Description of the API",
     "version": "1.0.0"
   },
   "host": "localhost:3090",
-  "basePath": "/api/users",
+  "basePath": "/",
   "schemes": [
     "http"
   ],
   "paths": {
     "/create": {
       "post": {
-        "summary": "Create a new user",
-        "description": "This endpoint creates a new user.",
+        "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
-            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "user_name": {
-                  "type": "string",
                   "example": "any"
                 },
                 "user_email": {
-                  "type": "string",
                   "example": "any"
                 },
                 "user_password": {
-                  "type": "string",
                   "example": "any"
                 },
                 "user_profile": {
-                  "type": "string",
                   "example": "any"
                 },
                 "user_gmail_id": {
-                  "type": "string",
                   "example": "any"
                 },
                 "user_facebook_id": {
-                  "type": "string",
                   "example": "any"
                 },
                 "user_type": {
-                  "type": "string",
                   "example": "any"
                 },
                 "member_id": {
-                  "type": "integer",
-                  "example": 1
+                  "example": "any"
                 }
               }
             }
@@ -61,10 +51,43 @@
         ],
         "responses": {
           "201": {
-            "description": "User created successfully"
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/register": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
           },
           "400": {
-            "description": "Invalid input"
+            "description": "Bad Request"
           }
         }
       }
